--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run dropdb_win & set NODE_ENV=dev&mocha test/ --reporter mochawesome --require babel-register --exit",
     "test:ci": "npm run dropdb_unix & NODE_ENV=dev mocha test test --reporter mocha-junit-reporter --reporter-options mochaFile=./log/report.xml --require babel-register --timeout 10000 --exit",
     "dropdb_win": "scripts\\dropdb.bat",
-    "dropdb_unix": ""
+    "dropdb_unix": "./scripts/dropdb.sh"
   },
   "keywords": [
     "qaninja",
